--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
+    "version": 2,
     "builds": [
       {
-        "src": "index.html",
+        "src": "public/index.html",
         "use": "@vercel/static"
       },
       {
@@ -12,10 +13,11 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/index.html"
+        "dest": "/public/index.html"
       }
     ]
   }
+  
   
   
   
