--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,15 @@
         "src": "public/**/*",
         "use": "@vercel/static"
       }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/public/index.html"
+      }
     ]
   }
+  
   
   
   
